--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -5,7 +5,7 @@
         width: 200px;
         cursor: pointer;
         border-radius: 3px;
-        background: blue;
+        background:red;
         padding: 10px;
       
 }
